# ganymede

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
samples/: test.ipynb
src/director/: go.mod  main.go
src/ganymede/: __main__.py
src/generator/: go.mod  main.go
