[project]
name = "ganymede"
authors = [
    { name = "Steven Carter", email = "josiah_carberry@brown.edu" },
]
description = "My package description"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "ganymede.__VERSION__"}
# readme = {file = ["README.rst", "USAGE.rst"]}
